@@ -316,6 +316,7 @@ public class HistoricalGraphView extends ViewPart implements GraphSettingsChange
       chart.setLegendPosition(config.getLegendPosition());
       chart.setStacked(config.isStacked());
       chart.setTranslucent(config.isTranslucent());
+      chart.setLineWidth(config.getLineWidth());
       if(!config.isAutoScale())
       {
          chart.setYAxisRange(config.getMinYScaleValue(), config.getMaxYScaleValue());
